Added convexification of obj and constraints

--- a/scp_explorations.ipynb
+++ b/scp_explorations.ipynb
@@ -16,7 +16,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -37,7 +37,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -59,12 +59,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from trajopt import Trajopt, Constraint"
+      "from trajopt.trajopt import Trajopt\n",
+      "from trajopt.constraint import Constraint, Point"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -75,18 +76,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import numpy as np"
+      "import numpy as np\n",
+      "import gurobipy as grb"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -97,7 +99,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -121,7 +123,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -135,7 +137,188 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 72
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t.steps_i"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 73,
+       "text": [
+        "array([[0, 2, 4],\n",
+        "       [1, 3, 5]])"
+       ]
+      }
+     ],
+     "prompt_number": 73
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t.base_cost(t.x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 74,
+       "text": [
+        "12.5"
+       ]
+      }
+     ],
+     "prompt_number": 74
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t.nonconvex_cost(t.x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 75,
+       "text": [
+        "12.599"
+       ]
+      }
+     ],
+     "prompt_number": 75
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m2, grb_vars = t.convexify(t.x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "adding constraint, ai: [-0.   0.2 -0.   0.8 -0.  -0.  -1.  -0. ] bi: -0.099\n"
+       ]
+      }
+     ],
+     "prompt_number": 154
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m2.optimize()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 156
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(m2.objVal)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "12.5306281253\n"
+       ]
+      }
+     ],
+     "prompt_number": 157
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print([v.x for v in grb_vars])\n",
+      "xstar = array([v.x for v in grb_vars])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0.0, 0.0, 2.5, -0.12374999927963913, 5.0, 0.0, 6.325136963063295e-10, 0.0]\n"
+       ]
+      }
+     ],
+     "prompt_number": 158
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "A, b = t.obstacle_constraints[0].linearize(xstar)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 159
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "A.dot(xstar) - b"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 160,
+       "text": [
+        "0.00012228776068299929"
+       ]
+      }
+     ],
+     "prompt_number": 160
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t.nonconvex_cost(xstar)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 161,
+       "text": [
+        "12.530750413036616"
+       ]
+      }
+     ],
+     "prompt_number": 161
     },
     {
      "cell_type": "code",
@@ -143,8 +326,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
+     "outputs": []
     }
    ],
    "metadata": {}
